[package]
name = "winter2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atom_syndication = { version = "0.12.2", features = ["serde"] }
base64 = "0.22.0"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
eframe = "0.26.2"
egui-notify = "0.13.0"
eyre = "0.6.12"
futures = "0.3.30"
reqwest = { version = "0.12.2", features = ["blocking"] }
rss = { version = "2.0.7", features = ["serde", "atom"] }
rustbreak = { version = "2.0.0", features = ["ron"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
uuid = { version = "1.8.0", features = ["v4"] }

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
rand = "0.8.5"
